--- a/src/sass/elements/_accessibility.scss
+++ b/src/sass/elements/_accessibility.scss
@@ -36,7 +36,7 @@
 		    position: absolute;
 		    z-index: 110;
 		    @include buttoncolor();
-		    @include box-shadow(0 10px 20px rgba(0, 0, 0, 0.5));
+		    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
 		    padding: 1.5em;
 		    top: 0px;
 		    left: 0;
