--- a/src/sass/structure/content/_gallery.scss
+++ b/src/sass/structure/content/_gallery.scss
@@ -240,11 +240,11 @@
 
 
 		top: 75%;
-		@include transform-translate(0, -75%);
+		transform: translate(0, -75%);
 
 		@media (min-width: $screen-xs) {
 			top: 50%;
-			@include transform-translate(0, -50%);
+			transform: translate(0, -50%);
 		}
 
 		padding: 0;
