--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -54,12 +54,9 @@
  
     transition: box-shadow 0.2s;
 
-
-   
-
     body:not([data-scroll='0']) & {
         background-color: var(--color-white);
-        @include box-shadow(0 0 21px rgba(0, 0, 0, 0.11));
+        box-shadow: 0 0 21px rgba(0, 0, 0, 0.11);
     }
     body.nav-toggled & {
         top: unset;
