--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -1,7 +1,7 @@
 /*!
 * Editor CSS for Theme:
 * Theme Name: FAU-Einrichtungen
-* Version: 2.6.6
+* Version: 2.6.7-0
 * GitHub Issue URL: https://github.com/RRZE-Webteam/FAU-Einrichtungen/issues
 */ /*-----------------------------------------------------------------------------------*/
 /* Backend CSS
