--- a/src/sass/structure/widgets/_misc.scss
+++ b/src/sass/structure/widgets/_misc.scss
@@ -17,11 +17,11 @@
 
 	
 	li {
-		font-size: var(--font-size-sm, 0.875rem);
 		list-style-type: none;
-		
 		a {
 			padding: 0;
+			font-size: var(--font-size-sm, 0.875rem);
+			line-height: max(24px, 1.5em);
 			text-decoration: none;
 		}
 		
