--- a/print.css
+++ b/print.css
@@ -1,6 +1,6 @@
 ﻿/*!
 Theme Name: FAU-Einrichtungen
-Version: 2.6.20
+Version: 2.6.22-1
 Requires at least: 6.4
 Tested up to: 6.8
 Requires PHP: 8.2
