--- a/src/sass/block-library/_wp-block-figure.scss
+++ b/src/sass/block-library/_wp-block-figure.scss
@@ -1,3 +1,6 @@
+/*----------------------------------------------------------------------------*/
+/*  for core/image
+/*----------------------------------------------------------------------------*/
 main figure.wp-block-image,
 main figure.wp-block-image img {
     max-width: 100%;
