--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.6.36
+Version: 2.6.37
 Requires at least: 6.4
 Tested up to: 6.8
 Requires PHP: 8.2
-Description: WordPress-Theme der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU)
+Description: WordPress-Theme der Friedrich-Alexander-Universität Erlangen-Nürnberg (FAU) von 2015 bis 2025
 Theme URI: https://github.com/RRZE-Webteam/FAU-Einrichtungen
 GitHub Theme URI: https://github.com/RRZE-Webteam/FAU-Einrichtungen
 GitHub Issue URL: https://github.com/RRZE-Webteam/FAU-Einrichtungen/issues
